@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Bug Fixes::
 
 * place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
+* accurately trap LoadError from CodeRay if source language is not recognized on code block
 
 == 2.1.0 (2022-06-11) - @mojavelinux
 
